trunk/Archive2/dd/12fa61f23b95cf/main.cpp
#include <type_traits>
struct cat
{
    cat() = default;
    cat(cat const&) = default;
    
    cat(cat&&) = default;
    cat(cat&&, ...) {};
};

cat meow() { return cat{}; }

int main()
{
    meow();
}